// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users can be created/updated/edited/deleted: private can be created 1`] = `
{
  "data": {
    "createUser": {
      "email": Any<String>,
      "emailVerifiedAt": Any<Date>,
      "flair": null,
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: private can be deleted 1`] = `
{
  "data": {
    "deleteUser": {
      "email": Any<String>,
      "emailVerifiedAt": null,
      "flair": null,
      "id": Any<String>,
      "name": "Dark Knight",
      "roles": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: private can be read by id 1`] = `
{
  "data": {
    "user": {
      "email": Any<String>,
      "emailVerifiedAt": Any<Date>,
      "flair": null,
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: private can be updated 1`] = `
{
  "data": {
    "updateUser": {
      "email": Any<String>,
      "emailVerifiedAt": null,
      "flair": null,
      "id": Any<String>,
      "name": "Dark Knight",
      "roles": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: private can reset user password 1`] = `
{
  "data": {
    "createSession": {
      "token": Any<String>,
      "user": ObjectContaining {
        "email": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: private can reset user password 2`] = `
{
  "data": {
    "resetUserPassword": {
      "email": Any<String>,
      "emailVerifiedAt": Any<Date>,
      "flair": null,
      "id": Any<String>,
      "name": "Robin Wayne",
      "roles": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: private can reset user password 3`] = `
{
  "data": {
    "createSession": {
      "token": Any<String>,
      "user": ObjectContaining {
        "email": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: public updatePaymentProviderCustomers can add payment provider customers 1`] = `
{
  "data": {
    "updatePaymentProviderCustomers": [
      {
        "customerID": "1234-1234",
        "paymentProviderID": "123-123",
      },
      {
        "customerID": "1233-1233",
        "paymentProviderID": "122-122",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Users can be created/updated/edited/deleted: public updatePaymentProviderCustomers can update payment provider customers 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,12 +4,12 @@
        Object {
          "customerID": "1234-1234",
          "paymentProviderID": "123-123",
        },
        Object {
-         "customerID": "1233-1233",
-         "paymentProviderID": "122-122",
+         "customerID": "1222-1222",
+         "paymentProviderID": "121-121",
        },
      ],
    },
    "errors": undefined,
    "extensions": undefined,"
`;
